--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </div>
       <div class="titles">
         <h1 class="titles__h1">DR. FÉLIX MACEDO</h1>
-        <h2 class="titles__h2"><b>Reumatólogo</b>, especialista en <b>Acupuntura</b> y tratamientos estéticos con <b>Plasma rico en plaquetas</b>.</h2>
+        <h2 class="titles__h2">Reumatólogo, especialista en Acupuntura y tratamientos estéticos con Plasma rico en plaquetas.</h2>
         <div class="titles__button">
           <button class="titles__button button-primary">Contáctese</button>
         </div>
