--- a/artrosis.html
+++ b/artrosis.html
@@ -16,13 +16,13 @@
 </head>
 <body>
   <div style="padding: 70px 0 120px 0">
-    <h1 style="padding: 0px 0 40px 0">Artrósis</h1>
+    <h1 style="padding: 0px 0 40px 0; font-weight: bold">Artrosis</h1>
+
+    <p>Tratamiento con:</p>
 
     <ul style="padding: 0px 0 40px 0" class="index"></ul>
 
     <div class="text">
-
-      <h2 style="font-size: 22px">¿Qué es la Artrosis?</h2>
 
       <p>
         La Artrosis es una enfermedad que se caracteriza clínicamente en sus etapas avanzadas por:
@@ -107,7 +107,7 @@
         Evolución: Es variable. Si hay factores mecánicos que la mantienen puede ser progresiva.
       </p>
 
-      <h2 style="font-size: 22px">Tratamiento de la Artrosis con PRP</h2>
+      <h2 style="font-size: 22px">Plasma Rico en Plaquetas</h2>
 
       <p>
         Las Plaquetas poseen en su interior los llamados Factores de Crecimiento (FC).
@@ -139,8 +139,8 @@
           <li>Codos</li>
           <li>Tobillos</li>
         </ul>
-        
-      <h2 style="font-size: 22px">Tratamiento de la Artrosis con AH</h2>
+
+      <h2 style="font-size: 22px">Ácido Hialurónico</h2>
 
       <p>
         El Ácido Hialurónico (AH) es uno de los componentes principales del Líquido Sinovial, Cartílago y de la Membrana Sinovial.
