--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </div>
       <div class="titles">
         <h1 class="titles__h1">DR. FÉLIX MACEDO</h1>
-        <h2 class="titles__h2">Reumatólogo, especialista en Acupuntura y tratamientos estéticos con Plasma rico en plaquetas.</h2>
+        <h2 class="titles__h2">Médico Reumatólogo, especialista en Acupuntura y tratamientos estéticos con Plasma rico en plaquetas.</h2>
         <div class="titles__button">
           <button class="titles__button button-primary">Contáctese</button>
         </div>
@@ -39,7 +39,25 @@
       <div class="sq1">
         <div class="sq1__txt">
           <h3 class="sq1__txt__h3">Acupuntura</h3>
-          <p class="sq1__txt__p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque minus, ipsam veniam ut placeat quibusdam omnis mollitia repellendus enim eveniet vitae dolor vel odit, eius recusandae magni autem nisi qui minima suscipit velit ex voluptate excepturi. Ut, non, iusto? Aliquam.</p>
+          <div class="sq1__txt__div">
+            <div class="sq1__txt__div__tag">Dolores</div>
+            <div class="sq1__txt__div__tag">Artrosis</div>
+            <div class="sq1__txt__div__tag">Tendinitis</div>
+            <div class="sq1__txt__div__tag">Hernia de disco</div>
+            <div class="sq1__txt__div__tag">Ciática</div>
+            <div class="sq1__txt__div__tag">Contracturas</div>
+            <div class="sq1__txt__div__tag">Columa vertebral</div>
+            <div class="sq1__txt__div__tag">Fibromialgia</div>
+            <div class="sq1__txt__div__tag">Dolores de cabeza</div>
+            <div class="sq1__txt__div__tag">Hemiplejia</div>
+            <div class="sq1__txt__div__tag">Nerviosismo</div>
+            <div class="sq1__txt__div__tag">Stress</div>
+            <div class="sq1__txt__div__tag">Insomnio</div>
+            <div class="sq1__txt__div__tag">Vértigos</div>
+            <div class="sq1__txt__div__tag">Lesiones deportivas</div>
+            <div class="sq1__txt__div__tag">Fracturas</div>
+            <div class="sq1__txt__div__tag">Mejoramiento del estado general</div>
+          </div>
           <div class="a-button-div">
             <a class="a-button" href="acupuntura.html">Leer más</a>
           </div>
@@ -48,7 +66,13 @@
       <div class="sq1">
         <div class="sq1__txt">
           <h3 class="sq1__txt__h3">Plasma rico en plaquetas</h3>
-          <p class="sq1__txt__p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque minus, ipsam veniam ut placeat quibusdam omnis mollitia repellendus enim eveniet vitae dolor vel odit, eius recusandae magni autem nisi qui minima suscipit velit ex voluptate excepturi. Ut, non, iusto? Aliquam.</p>
+            <ul class="sq1__txt__p">
+              <li class="sq1__txt__p__span">Regenera - Cartílago, Tendón, Piel</lili>
+              <li class="sq1__txt__p__span">Artrosis - Rodilla, Cadera, Hombros, Tobillos, Codos</li>
+              <li class="sq1__txt__p__span">Tendinitis</li>
+              <li class="sq1__txt__p__span">Lesiones deportivas</li>
+              <li class="sq1__txt__p__span">Rejuvenecimiento facial</li>
+            </ul>
           <div class="a-button-div">
             <a class="a-button" href="prp.html">Leer más</a>
           </div>
@@ -57,20 +81,19 @@
       <div class="sq1">
         <div class="sq1__txt">
           <h3 class="sq1__txt__h3">Ácido Hialurónico</h3>
-          <p class="sq1__txt__p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque minus, ipsam veniam ut placeat quibusdam omnis mollitia repellendus enim eveniet vitae dolor vel odit, eius recusandae magni autem nisi qui minima suscipit velit ex voluptate excepturi. Ut, non, iusto? Aliquam.</p>
+          <p class="sq1__txt__p">
+            <h5 class="sq1__txt__p__h5">Artrosis</h5>
+            <ul>
+              <li>Calma el dolor</li>
+              <li>Proteje e inhibe degeneración del cartílago</li>
+              <li>Lubrica</li>
+              <li>Mejora movilidad articular</li>
+            </ul>
+          </p>
           <div class="a-button-div">
             <a class="a-button" href="ah.html">Leer más</a>
           </div>
         </div>
-      </div>
-    </div>
-
-    <div id="abstract">
-      <div class="abstract-text">
-        Lorem ipsum dolor sit amet, consectetur <b>adipisicing</b> elit. Sapiente excepturi optio, <b>ratione provident</b> facilis quas eum corporis veritatis quae ipsam laboriosam iure earum cupiditate distinctio illo praesentium tenetur at aperiam accusamus voluptatum nobis blanditiis dolorum! Repellat nemo tenetur earum quas, nulla at similique quisquam, ipsam amet aperiam id saepe. Alias odio enim itaque aliquid laborum neque earum laudantium. Illo nesciunt quibusdam non cum eius dolorem, odit <b>blanditiis</b> sed. Asperiores, eius.
-      </div>
-      <div class="abstract-arrow">
-        <img class="abstract-arrow__img" src="img/arrow.png" alt="">
       </div>
     </div>
 
@@ -80,11 +103,25 @@
           <h4 class="sq2__txt__h4">Artrosis</h4>
           <div class="sq2__txt__div">
             <div class="sq2__txt__div__1">
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam quia similique mollitia odio distinctio molestias voluptatibus totam maxime deleniti sunt natus, aut. Nihil expedita optio, deleniti numquam illum unde, beatae ipsum esse voluptate mollitia aliquam ipsa aliquid alias non est.
-            </p>
-            <p><b>Tratamiento con PRP</b>: Lorem ipsum dolor sit amet, , deserunt magnam. Adipisci dicta repellendus odio impedit.</p>
-            <p><b>Tratamiento con AH</b>: Lorem ipsum dolor sit amet, quo vitae earum voluptatem pariatur nobis nihil blanditiis nam, suscipit et consequatur, porro doloribus vel voluptates beatae animi sit. Facere labore vero sunt optio at.</p>
+              <p>
+                La Artrosis se caracteriza clínicamente en sus etapas avanzadas por:
+              </p>
+                <ul>
+                  <li>Dolor mecánico</li>
+                  <li>Rigidez</li>
+                  <li>Hinchazón</li>
+                  <li>Deformación</li>
+                  <li>Limitación del movimiento articular</li>
+                </ul>
+              <p class="sq2__txt__div__1__p">Tratamiento con</p>
+              <div class="sq2__txt__div__1__1">
+                <div class="sq2__txt__div__1__1--half">
+                  Plasma rico en plaquetas
+                </div>
+                <div class="sq2__txt__div__1__1--half">
+                  Ácido Hialurónico
+                </div>
+               </div>
             </div>
           </div>
           <div class="a-button-div">
@@ -95,14 +132,19 @@
       <div class="sq2">
         <div class="sq2__txt">
           <h4 class="sq2__txt__h4">Tratamientos estéticos</h4>
-          <p class="sq2__txt__p">Rejuvenecimiento facial con <b>Plasma Rico en Plaquetas</b>. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur nulla, optio non aliquam sapiente rerum ipsum, cupiditate at. Pariatur ad nisi iure numquam ducimus amet quam nobis veritatis. Nostrum ullam molestias a et at, similique animi eum necessitatibus deserunt iste.</p>
+          <p class="sq2__txt__p">Rejuvenecimiento facial con Plasma Rico en Plaquetas.</p>
           <ul class="sq2__txt__ul">
              <li>Regenera</li>
              <li>Rejuvenece</li>
              <li>Aumenta la firmeza de la Piel, recuperando su elasticidad y brillo</li>
              <li>Detiene el envejecimiento cutáneo</li>
           </ul>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio quaerat ab repellat ipsam eum.</p>
+          <p>Hilos Tensores</p>
+          <ul>
+            <li>Sostienen y reposicionan la Piel y tejidos caídos</li>
+            <li>Combate la flacidez</li>
+            <li>Efecto lifting: Se recupera la tensión de la Piel</li>
+          </ul>
           <div class="a-button-div">
             <a class="a-button" href="ah.html">Leer más</a>
           </div>
@@ -110,7 +152,14 @@
       </div>
     </div>
 
-    <div id="faq">
+    <div id="abstract">
+      <div class="abstract-text">
+        En nuestro consultorio combinamos los principios de la <b>Acupuntura</b> tradicional china con los conocimientos científicos de la medicina occidenta. Nuestra condición de médico y especialista en Reumatología, junto con más de veinticinco años de estudio y práctica de la Acupuntura, respaldan nuestro trabajo profesional. Como complemento de las terapias del dolor ofrecemos el tratamiento regenerativo con <b>Plas Rico en Plaquetas</b>, con el fin de restaurar los tejidos dañados (origen del sufrimiento). A ésto le agregamos la terapia intra-articular con <b>Ácido Hialurónico</b> que permite calmar el dolor, lubricar la articulación, proteger el cartílago y mejorar la movilidad articular. En los últimos años hemos incorporado los <b>tratamientos estéticos</b> con <b>Plasma Rico en Plaquetas</b> para el rejuvenecimiento de la Piel y los <b>Hilos Tensores</b>, con un efecto lifting no quirúrgico, que levantan todos los tejidos caídos por el paso de los años.
+      </div>
+      <div class="a-button-div"><a class="a-button" href="faq.html">Leer trayectoria</a></div>
+    </div>
+
+    <!-- <div id="faq">
       <div class="faq-title">
         <h4 class="faq-title__h4">Preguntas frecuentes</h4>
       </div>
@@ -133,7 +182,8 @@
         </div>
       </div>
       <div class="a-button-div"><a class="a-button" href="faq.html">Leer más</a></div>
-    </div>
+    </div> -->
+
     <div id="dir">
       <div class="dir-text">
 
