--- a/acupuntura.html
+++ b/acupuntura.html
@@ -30,99 +30,111 @@
 
       <h2 style="font-size: 22px">¿Qué ventajas tiene hacerse acupuntura?</h2>
 
-      <p>Cuando es correctamente aplicada en manos de un médico, no tiene efectos adversos.
-      Prácticamente no existen contraindicaciones, éstas son excepcionales.
-      La acupuntura contribuye a disminuir la ingesta de medicamentos, sobretodo antiinflamatorios,
-      los cuales pueden resultar nocivos para el organismo.
-      Está indicado en enfermedades que no responden al tratamiento habitual.</p>
+      <ul>
 
-      <p>En muchos casos la acupuntura puede ser el primer tratamiento de elección por la rápida eficacia de sus resultados:</p>
+      <li>Cuando es correctamente aplicada en manos de un <strong>médico, no tiene efectos adversos</strong>.</li>
+
+      <li>Prácticamente <strong>no existen contraindicaciones</strong>. Éstas son excepcionales.</li>
+
+      <li>La acupuntura <strong>contribuye a disminuir la ingesta de medicamentos</strong>, sobretodo antiinflamatorios,
+      los cuales pueden resultar nocivos para el organismo.</li>
+
+      <li>Está indicado <strong>en enfermedades que no responden al tratamiento habitual</strong>.</li>
+
+      <li>En muchos casos la acupuntura puede ser el <strong>primer tratamiento de elección</strong> por la rápida eficacia de sus resultados:</li>
         <ul>
-          <li>Contracturas musculares</li>
-          <li>Cefaleas</li>
-          <li>Dolores de la columna vertebral</li>
-          <li>Lumbociatalgias - lumbociatalgias por hernia de disco</li>
+          <li><strong><u>Contracturas musculares</u></strong></li>
+          <li><strong><u>Cefaleas</u></strong></li>
+          <li><strong><u>Dolores de la columna vertebral</u></strong></li>
+          <li><strong><u>Lumbociática - lumbociática por hernia de disco</u></strong></li>
         </ul>
+
+      </ul>
 
 
       <h2 style="font-size: 22px">Indicaciones de la acupuntura</h2>
 
       <p>Dolores agudos y crónicos de origen reumáticos</p>
         <ul>
-          <li>Artrosis</li>
-          <li>Artritis
+          <li><strong>Artrosis</strong></li>
+          <li><strong>Artritis</strong>
             <ul>
-              <li>Poliartritis Reumatoidea</li>
-              <li>Gota</li>
+              <li><strong>Poliartritis Reumatoidea</strong></li>
+              <li><strong>Gota</strong></li>
               <li>Etc</li>
             </ul>
           </li>
-          <li>Fibromialgia</li>
+          <li><strong>Fibromialgia</strong></li>
         </ul>
 
-      <p>Dolores de espalda</p>
+      <p>Dolores de <strong>espalda</strong></p>
         <ul>
-          <li>Cervical</li>
-          <li>Dorsal</li>
-          <li>Lumbosacra</li>
+          <li><strong>Cervical</strong></li>
+          <li><strong>Dorsal</strong></li>
+          <li><strong>Lumbosacra</strong></li>
         </ul>
 
-      <p>Contracturas musculares</p>
+      <p><strong>Contracturas musculares</strong></p>
 
-      <p>Tendinitis</p>
+      <p><strong>Tendinitis</strong></p>
         <ul>
-          <li>Hombro</li>
-          <li>Codo</li>
-          <li>Rodilla</li>
-          <li>Pie</li>
+          <li><strong>Hombro</strong></li>
+          <li><strong>Codo</strong></li>
+          <li><strong>Rodilla</strong></li>
+          <li><strong>Pie</strong></li>
         </ul>
 
       <p>Neuralgias</p>
         <ul>
-          <li>Ciática</li>
-          <li>Cruralgia</li>
-          <li>Cervico braquialgias</li>
+          <li><strong>Ciática</strong></li>
+          <li><strong>Cruralgia</strong></li>
+          <li><strong>Cervico braquialgias</strong></li>
           <li>Etc.</li>
         </ul>
 
-      <p>Sindrome del t. Carpiano</p>
+      <p><strong>Sindrome del Túnel Carpiano</strong></p>
 
-      <p>Cefaleas
+      <p><strong>Dolores de cabeza</strong></p>
         <ul>
-          <li>Migrañas</li>
-          <li>Jaquecas</li>
-          <li>Cefaleas tensionales</li>
+          <li><strong>Migrañas</strong></li>
+          <li><strong>Jaquecas</strong></li>
+          <li><strong>Cefaleas tensionales</strong></li>
           <li>Etc.</li>
         </ul>
 
 
-      <p>Traumatismo</p>
-      <p>Esguince</p>
-      <p>Lesiones Deportivas</p>
-      <p>Parálisis</p>
-      <p>Paresia de Miembros</p>
-      <p>Neurosis, Ansiedad, Nerviosismo, Insomnio, Depresión</p>
+      <p><strong>Traumatismo</strong></p>
+      <p><strong>Esguince</strong></p>
+      <p><strong>Lesiones Deportivas</strong></p>
+      <p><strong>Parálisis</strong></p>
+      <p><strong>Paresia de Miembros</strong></p>
+      <p><strong>Neurosis, Ansiedad, Nerviosismo, Insomnio, Depresión</strong></p>
 
-      <h2 style="font-size: 22px">Acupuntura china</h2>
+      <h2 style="font-size: 30px; text-align: center">Acupuntura china</h2>
 
-      <p>
-      La acupuntura es una rama de la Medicina Tradicional China (MTCH).
-      Su nombre proviene de las palabras en latín acus = aguja y puntura = pinchar.
-      Es la técnica de inserción de agujas muy finas en determinadas partes del cuerpo
-      (puntos de acupuntura) con fines terapéuticos.</p>
+      <div class = "squared">
+        <p>
+        La <strong>Acupuntura</strong> es una rama de la <strong>Medicina Tradicional China (MTCH)</strong>.
+        Su nombre proviene de las palabras en latín acus = aguja y puntura = pinchar.
+        Es la técnica de inserción de agujas muy finas en determinadas partes del cuerpo
+        (puntos de acupuntura) con fines terapéuticos.
+        </p>
 
-      <p>
-      Existen otras formas de estimulación de los puntos además de las agujas, aplicando calor
-      utilizando sustancias químicas, electricidad, corrientes electromagnéticas.
-      Clásicamente e históricamente la acupuntura va acompañada con la moxibustión.
-      </p>
+        <p style="margin: 0">
+        <strong>Existen otras formas de estimulación de los puntos además de las agujas, aplicando calor
+        utilizando sustancias químicas, electricidad, corrientes electromagnéticas</strong>.
+        Clásicamente e históricamente la acupuntura va acompañada con la moxibustión.
+        </p>
+      </div>
 
       <h3 style="font-size: 20px">Moxibustión</h3>
 
-      <p>
+      <div class = "squared">
+      <p style="margin: 0">
       Moxibustión proviene de la palabra japonesa mogusa = cono de artemisa y bustión = quemar.
       Es la técnica de calentar determinadas zonas del cuerpo con moxa con fines terapeúticos.
       </p>
+      </div>
 
       <p>
       La Moxa son conos o cigarros de hojas secas de artemisa vulgaris, molidas y conservadas durante varios años,
@@ -134,14 +146,17 @@
 
       <p>
       En la antiguedad el tratamiento con Moxa era muy popular y posiblemente se haya originado antes que la acupuntura.
-      En nuestra clínica usamos muy poco esta técnica, pues hemos logrado efectos superiores con métodos más modernos.
+      <strong>En nuestra clínica</strong> usamos muy poco esta técnica, pues hemos logrado efectos superiores con métodos más modernos.
       </p>
 
       <h3 style="font-size: 20px">Auriculoterapia</h3>
 
-      <p>
+
+      <div class = "squared">
+      <p style="margin: 0">
         Es el método de estimulación de los puntos ubicados en el pabellón de la oreja con fines profilácticos y terapéuticos.
       </p>
+      </div>
 
       <p>
       Los puntos o zonas del pabellón tienen íntima relación con todas las partes del cuerpo.
@@ -154,17 +169,17 @@
       De esta manera el pabellón de la oreja es una zona propicia para el diagnóstico, profilaxis y tratamiento de enfermedades.
       </p>
 
-      <h3 style="font-size: 20px">La energia</h3>
+      <h3 style="font-size: 30px; text-align: center">Energía</h3>
 
-      <p>De acuerdo con la antigua filosofía china al principio del universo todo era energía.
-      No existía nada más que una energía cósmica "inactiva", carente de polos.</p>
+      <p>De acuerdo con la antigua filosofía china al principio del universo todo era <strong>energía</strong>.
+      No existía nada más que una <strong>energía cósmica</strong> "inactiva", carente de polos.</p>
 
-      <p>En algún momento una fuerza natural y poderosa, el Tao, acciona para que esta energía se polarice.
-      Aparecen el Yin y el Yang, dos polos opuestos pero complementarios de la misma energía. La confrontación de estos polos
+      <p>En algún momento una fuerza natural y poderosa, el <strong>Tao</strong>, acciona para que esta energía se polarice.
+      Aparecen el <strong>Yin</strong> y el <strong>Yang</strong>, dos polos energéticos opuestos pero complementarios. La confrontación de estos polos
       dará como resultado la creación de los planetas, los cinco elementos (Agua, Madera, Fuego, Tierra, Metal), el Hombre y
-      todos los seres vivos, además de todos los componentes de la Tierra: montañas, lagos, bosques, mares, etc.</p>
+      todos los seres vivos, además de todo lo que constituye la Tierra: montañas, lagos, bosques, mares, etc.</p>
 
-      <p>Por lo tanto, el Yin y el Yang están presentes no sólo en el universo, sino también en la naturaleza, dentro de todos
+      <p>Por lo tanto, el <strong>Yin</strong> y el <strong>Yang</strong> están presentes no sólo en el universo, sino también en la naturaleza, dentro de todos
       los seres vivos y en todas las actividades del hombre: sociedad, política, economía, ciencias, deportes, etc.
       Para que haya armonía tiene que haber un equilibrio de fuerzas entre el el Yin y el Yang. En el Hombre este equilibrio es la
       salud, lo contrario es la enfermedad.</p>
@@ -329,17 +344,21 @@
       De esta manera el cuerpo humano funciona como un "todo integrado".
       </p>
 
-      <h2 style="font-size: 22px">Acupuntura cientifica</h2>
-      <p>La ciencia occidental contribuyó a un mejor entendimiento de la acupuntura y con ello logró métodos, diagnósticos y
-      tratamientos más prácticos y modernos.</p>
+      <h2 style="font-size: 30px; text-align: center">Acupuntura y el conocimiento cientifico</h2>
 
+      <div class = "squared">
+      <p style="margin: 0">
+      La ciencia occidental contribuyó a un mejor entendimiento de la acupuntura y con ello logró métodos, diagnósticos y
+      tratamientos más prácticos y modernos.</p>
+      </div>
+
+      <div class = "squared">
       <p>En nuestro consultorio combinamos los principios de la acupuntura tradicional china con los conocimientos científicos de
       la medicina occidental.</p>
 
-      <p>Nuestra condición de médico y especialista en reumatología junto con muchos años de estudio y práctica de la acupuntura,
+      <p style="margin: 0">Nuestra condición de médico y especialista en reumatología junto con muchos años de estudio y práctica de la acupuntura,
       respaldan nuestro trabajo profesional.</p>
-
-      <h3 style="font-size: 20px">Acupuntura y el conocimiento científico</h3>
+      </div>
 
       <p>
       Desde sus inicios, hace miles de años, la Acupuntura ha tenido una permanente evolución en cuanto a nuevos puntos
@@ -403,7 +422,7 @@
       </p>
 
 
-      <h2 style="font-size: 22px">Puntos Gatillos</h2>
+      <h2 style="font-size: 30px; text-align: center">Puntos Gatillos</h2>
 
       <p>
       Es un nódulo o banda dolorosa en un músculo esquelético o faseia, palpable debajo de la piel, que duele espontáneamente o a la presión produciendo un dolor a distancia (dolor referido) con una irradiación que es característica para cada músculo.
@@ -433,10 +452,13 @@
       Un PG activado (sensibilizado, dolorido) puede ser la causa primaria del cuadro doloroso o ser secundario a otro
       disturbio, por ejemplo visceral, manteniendo o agravando el dolor original.
       El dolor por PG es una de las causas más comunes de dolor Músculo-Esquelético.
-      Este cuadro afecta a casi todas las edades.
+      Este cuadro afecta a casi todas las edades. A diferencia de la Fibromialgia que incide mayoritariamente en las mujeres,
+      el dolor por PG afecta a ambos sexos por igual.
       </p>
+
+      <hr>
+
       <p>
-      A diferencia de la Fibromialgia que incide mayoritariamente en las mujeres, el dolor por PG afecta a ambos sexos por igual.
       El conocimiento de los puntos gatillo PG como se conoce ahora, se debe al gran aporte de la ciencia occidental a la
       Acupuntura.
       Si bien los chinos tenían conocimiento de los mismos, fue en realidad la medicina occidental la que aportó un mayor
@@ -466,71 +488,9 @@
       Travell junto con David Simons escriben en 1983 el primer libro sobre el tema.
       </p>
 
-      <h3 style="font-size: 20px">Anatomía del punto gatillo</h3>
-
-      <p>
-      Cada punto gatillo posee un eje neurovascular formado por un Nervio Motor, fibras aferentes sensoriales (nociceptivas, propioceptivos, vasos sanguíneos y fibras simpáticas).
-      Desde el nervio motor salen fibras dotadas de placas terminales motoras que se insertan en una fibra muscular.
-      En la zona de las placas terminales hay nódulos de contracción por efecto de la Acetilcolina liberada por el nervio.
-      </p>
-
-      <h3 style="font-size: 20px">Factores que activan al PG</h3>
-
-      <p>Traumatismo Muscular</p>
-        <ul>
-          <li>Lesión directa sobre un músculo</li>
-          <li>Sobrecarga súbita</li>
-          <li>Esfuerzos repetitivos</li>
-        </ul>
-
-      <p>
-      Ansiedad: La Ansiedad puede producir una contracción persistente de un músculo o grupo de éstos, activando los PG.
-      </p>
-
-      <p>
-      Radiculopatías: Los sufrimientos radiculares pueden activar PG en los músculos paraespinales produciéndose un dolor localizado o en los miembros.
-      Ésto se observa frecuentemente en la región Cervical y Lumbar.
-      La irritación de los nervios motores pueden activar y perpetuar la actividad de los PG.
-      Tratando solamente el o los PG se puede eliminar toda la sintomatología dolorosa.
-      </p>
-
-      <p>
-      Músculos debilitados: Las afecciones malignas o neurológicas como el ave que presentan debilitamiento muscular, pueden favorecer a la actividad de p.G.S.
-      </p>
-
-      <p>
-      Isquemia muscular: PG activados en la obstrucción arterial de la claudicación intermitente de MMII o en la Isquemia debido a espasticidad en las enfermedades neurológicas.
-      </p>
-
-      <p>
-      Irradiación del dolor visceral: Cuando un dolor visceral se irradia a la Piel o al músculo, puede activar PGS en la zona del trayecto (irradiación) del dolor.
-      En este caso se agregarían al dolor visceral original, la presencia del dolor por PG.
-      Por ejemplo, puntos gatillos que se activan en el Tórax como consecuencia de una enfermedad coronaria o aquellas que se activan en el abdomen en el trayecto de la irradiación del dolor de una Úlcera Gástrica.
-      </p>
-
-      <p>
-      Otras causas: La activación de PGS que surge de la exposición de los músculos al frío, humedad, corriente de aire o calor excesivo.
-      </p>
-
-      <h3 style="font-size: 20px">Punto Gatillo Activado</h3>
-
-      <p>
-      Un Punto Gatillo Activado es aquel cuyos nociceptores se tornan suficientemente sensibilizados para que el dolor se
-      irradie desde él hacia una zona a cierta distancia (dolor referido).
-      </p>
-
-      <p>
-      Hay 4 tipos de PG
-      </p>
-      <ul class= 'i'>
-        <li>Primarios: Son los primeros en activarse en un músculo determinado.</li>
-        <li>Secundarios: Se desarrollan en los músculos sinérgicos o antagonistas de los músculos primariamente afectados.</li>
-        <li>Satélites: Están en los músculos afectados por la irradiación del dolor del PG Primario. La activación de estos Puntos Gatillos Satélites irradia el dolor a una zona más distante aún.</li>
-        <li>Latentes: Son PG que están activados pero no lo suficiente como para producir un dolor espontáneo, pero sÍ a la palpación. Por lo tanto estos p.G. Están presentes en los músculos que espontáneamente no están doloridos.</li>
-      </ul>
-
-      Los investigadores encontraron que cada músculo tiene su propio patrón específico de irradiación del dolor por PGM.
-      Actualmente existen "mapas" que describen exactamente los trayectos de los dolores referidos de cada músculo del cuerpo.
+      <div class = "squared">
+      <p style="margin: 0; text-align: center">TRATANDO SOLAMENTE EL O LOS PUNTOS GATILLOS SE PUEDE ELIMINAR TODA LA SINTOMATOLOGÍA DOLOROSA</p>
+      </div>
 
     </div>
   </div>
