--- a/artrosis.html
+++ b/artrosis.html
@@ -16,7 +16,7 @@
 </head>
 <body>
   <div style="padding: 70px 0 120px 0">
-    <h1 style="padding: 0px 0 40px 0; font-weight: bold">Artrosis</h1>
+    <h1 style="padding: 0px 0 40px 0">Artrosis</h1>
 
     <p>Tratamiento con:</p>
 
