--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </div>
       <div class="titles">
         <h1 class="titles__h1">DR. FÉLIX MACEDO</h1>
-        <h2 class="titles__h2">Médico Reumatólogo, especialista en Acupuntura y tratamientos estéticos con Plasma rico en plaquetas.</h2>
+        <h2 class="titles__h2">MÉDICO REUMATÓLOGO <br> ACUPUNTURA <br> Tratamiento regenerativos con <br> PLASMA RICO EN PLAQUETAS</h2>
         <div class="titles__button">
           <button class="titles__button button-primary">Contáctese</button>
         </div>
@@ -67,7 +67,7 @@
         <div class="sq1__txt">
           <h3 class="sq1__txt__h3">Plasma rico en plaquetas</h3>
             <ul class="sq1__txt__p">
-              <li class="sq1__txt__p__span">Regenera - Cartílago, Tendón, Piel</lili>
+              <li class="sq1__txt__p__span">Regenera - Cartílago, Tendón, Piel</li>
               <li class="sq1__txt__p__span">Artrosis - Rodilla, Cadera, Hombros, Tobillos, Codos</li>
               <li class="sq1__txt__p__span">Tendinitis</li>
               <li class="sq1__txt__p__span">Lesiones deportivas</li>
@@ -95,6 +95,13 @@
           </div>
         </div>
       </div>
+    </div>
+
+    <div id="abstract">
+      <div class="abstract-text">
+        En nuestro consultorio combinamos los principios de la <b>Acupuntura</b> tradicional china con los conocimientos científicos de la medicina occidenta. Nuestra condición de médico y especialista en Reumatología, junto con más de veinticinco años de estudio y práctica de la Acupuntura, respaldan nuestro trabajo profesional. Como complemento de las terapias del dolor ofrecemos el tratamiento regenerativo con <b>Plas Rico en Plaquetas</b>, con el fin de restaurar los tejidos dañados (origen del sufrimiento). A ésto le agregamos la terapia intra-articular con <b>Ácido Hialurónico</b> que permite calmar el dolor, lubricar la articulación, proteger el cartílago y mejorar la movilidad articular. En los últimos años hemos incorporado los <b>tratamientos estéticos</b> con <b>Plasma Rico en Plaquetas</b> para el rejuvenecimiento de la Piel y los <b>Hilos Tensores</b>, con un efecto lifting no quirúrgico, que levantan todos los tejidos caídos por el paso de los años.
+      </div>
+      <div class="a-button-div"><a class="a-button" href="faq.html">Leer trayectoria</a></div>
     </div>
 
     <div class="squares">
@@ -150,13 +157,6 @@
           </div>
         </div>
       </div>
-    </div>
-
-    <div id="abstract">
-      <div class="abstract-text">
-        En nuestro consultorio combinamos los principios de la <b>Acupuntura</b> tradicional china con los conocimientos científicos de la medicina occidenta. Nuestra condición de médico y especialista en Reumatología, junto con más de veinticinco años de estudio y práctica de la Acupuntura, respaldan nuestro trabajo profesional. Como complemento de las terapias del dolor ofrecemos el tratamiento regenerativo con <b>Plas Rico en Plaquetas</b>, con el fin de restaurar los tejidos dañados (origen del sufrimiento). A ésto le agregamos la terapia intra-articular con <b>Ácido Hialurónico</b> que permite calmar el dolor, lubricar la articulación, proteger el cartílago y mejorar la movilidad articular. En los últimos años hemos incorporado los <b>tratamientos estéticos</b> con <b>Plasma Rico en Plaquetas</b> para el rejuvenecimiento de la Piel y los <b>Hilos Tensores</b>, con un efecto lifting no quirúrgico, que levantan todos los tejidos caídos por el paso de los años.
-      </div>
-      <div class="a-button-div"><a class="a-button" href="faq.html">Leer trayectoria</a></div>
     </div>
 
     <!-- <div id="faq">
