--- a/index.html
+++ b/index.html
@@ -99,9 +99,11 @@
 
     <div id="abstract">
       <div class="abstract-text">
-        En nuestro consultorio combinamos los principios de la <b>Acupuntura</b> tradicional china con los conocimientos científicos de la medicina occidenta. Nuestra condición de médico y especialista en Reumatología, junto con más de veinticinco años de estudio y práctica de la Acupuntura, respaldan nuestro trabajo profesional. Como complemento de las terapias del dolor ofrecemos el tratamiento regenerativo con <b>Plas Rico en Plaquetas</b>, con el fin de restaurar los tejidos dañados (origen del sufrimiento). A ésto le agregamos la terapia intra-articular con <b>Ácido Hialurónico</b> que permite calmar el dolor, lubricar la articulación, proteger el cartílago y mejorar la movilidad articular. En los últimos años hemos incorporado los <b>tratamientos estéticos</b> con <b>Plasma Rico en Plaquetas</b> para el rejuvenecimiento de la Piel y los <b>Hilos Tensores</b>, con un efecto lifting no quirúrgico, que levantan todos los tejidos caídos por el paso de los años.
+        En nuestro consultorio combinamos los principios de la <b>Acupuntura Tradicional China</b> con los conocimientos científicos de la Medicina Occidental. Nuestra condición de <b>Médico y Especialista en Reumatología</b>, junto con más de veinticinco años de estudio y práctica de la Acupuntura, respaldan nuestro trabajo profesional.
+Como complemento de las terapias del dolor ofrecemos el tratamiento regenerativo con <b>Plasma Rico en Plaquetas</b>. A ésto, le agregamos la terapia intra-articular con <b>Ácido Hialurónico</b>.
+En los últimos años hemos incorporado los <b>tratamientos estéticos con Plasma Rico en Plaquetas</b> y <b>los Hilos Tensores</b>.
       </div>
-      <div class="a-button-div"><a class="a-button" href="faq.html">Leer trayectoria</a></div>
+      <div class="a-button-div"><a class="a-button--abstract" href="cv.html">Currículum</a></div>
     </div>
 
     <div class="squares">
